--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,121 @@
 @import "bootstrap/dist/css/bootstrap.css";
+
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+html,body{
+background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+background-size: cover;
+background-repeat: no-repeat;
+height: 100%;
+font-family: 'Numans', sans-serif;
+}
+
+#div_top_hypers {
+    display:inline;      
+}
+#ul_top_hypers li{
+    display: inline;
+}
+
+.container{
+height: 100%;
+align-content: center;
+margin-top: 4%;
+}
+
+.card{
+height: 500px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.social_icon span{
+font-size: 60px;
+margin-left: 10px;
+color: #FFC312;
+}
+
+.social_icon span:hover{
+color: white;
+cursor: pointer;
+}
+
+.card-header h3{
+color: white;
+}
+
+.social_icon{
+position: absolute;
+left: 70%;
+top: -35px;
+}
+.profile_img{
+    margin-top: 7%;
+    margin-left: auto;
+  margin-right: auto;
+    align-items: center;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
+
+.input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+.input-group-prepend-navbar span{
+    font-size:30px;
+    background-color:transparent;
+    color: white;
+    border:0 !important;
+    }
+
+    .navlink{
+        font-family:  Tahoma,sans-serif;
+        
+        font-size: 25px;
+        text-align: center;
+        color: white;
+    margin: auto;    
+    }
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+.remember{
+color: white;
+}
+
+.remember input
+{
+width: 20px;
+height: 20px;
+margin-left: 15px;
+margin-right: 5px;
+}
+
+.login_btn{
+color: black;
+background-color: #FFC312;
+width: 100px;
+}
+
+.login_btn:hover{
+color: black;
+background-color: white;
+}
+
+.links{
+color: white;
+}
+
+.links a{
+margin-left: 4px;
+}
