--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+background-image:url(background.png);
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
@@ -119,3 +119,4 @@ color: white;
 .links a{
 margin-left: 4px;
 }
+
