--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -7,6 +7,9 @@
 
 }
 .pChat {
+  margin-right: 5px;
+  margin-left: 5px;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 12px;
