--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -9,7 +9,6 @@
 .pChat {
   margin-right: 5px;
   margin-left: 5px;
-
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 12px;
@@ -40,23 +39,24 @@
   height: 35px;
 }
 .sendMsg {
-  width:100%;
+  background-color: transparent;
+  width:80%;
   position: relative;
-  display: flex;
-  bottom: 0;
-  z-index: 1;
+  display: inline-flexbox;
+  height: auto;
   border-top: 1px solid lightgray;
-  padding: 10px;
-  padding-bottom: 30px;
-  background-color: #fafafa;
-}
+margin: auto;}
 
 .msgs {
   width:   80%;
-  background-color: white;
   margin:auto;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  margin-top: 10%;
+  height: 400px;
+  background:radial-gradient(circle, #72aee6, #9ec2e6, #c5d9ed);
+
 }
 
 
